--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@bufbuild/protobuf": "^2.10.2",
+    "@jax-js/jax": "^0.1.3",
+    "@jax-js/onnx": "file:../../../../private/tmp/jax-js/packages/onnx",
     "@types/three": "^0.182.0",
     "mujoco-js": "^0.0.7",
+    "onnx-buf": "^1.20.0-1",
     "onnxruntime-web": "^1.23.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
